fixed some layout issues in homepage and profile

--- a/client/src/css/homepage.css
+++ b/client/src/css/homepage.css
@@ -1,4 +1,4 @@
-#page-body {
+#homepage-body {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
@@ -65,6 +65,9 @@
 }
 
 @media (max-width: 991px) {
+  .container {
+    margin-top: -1px;
+  }
   #posts {
     margin: 0;
   }
