--- a/client/src/css/profile.css
+++ b/client/src/css/profile.css
@@ -1,7 +1,6 @@
 .profile {
   margin: 0 20px;
   width: 100%;
-  /* background-color: coral; */
   font-size: 1.3em;
   line-height: 1.5em;
 }
@@ -12,6 +11,8 @@
 }
 
 .profile-image {
+  width: 150px;
+  height: 150px;
   margin: 0 70px;
 }
 
@@ -20,7 +21,7 @@
   font-size: 1.6em;
 }
 
-.edit-profile-button {
+.profile-info .button {
   margin: 0 20px;
   padding: 5px 9px;
 }
@@ -45,9 +46,65 @@
   margin-bottom: 28px;
 }
 
-.post > img {
+.single-row > .post {
+  position: relative;
   width: 293px;
-  height: 293px;
+  margin-right: 28px;
+}
+
+.single-row > .post:last-child {
+  margin-right: 0;
+}
+
+.post img {
+  max-width: 100%;
+  max-height: 100%;
+  /* -webkit-transition: .2s all; */
+}
+
+/* .post img:hover {
+  -webkit-filter: brightness(50%);
+  content: attr(data-content);
+} */
+.post:before, .post:after {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity:0;
+  transition: all 0.5s;
+}
+
+.post:before {
+  content: attr(data-content);
+  width:100%;
+  color:#fff;
+  font-weight: 500;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.post:after {
+  content: '\A';
+  top: 0;
+  left: 0;
+  background:rgba(0,0,0,0.6);
+}
+
+.post:hover:before, .post:hover:after {
+  opacity: 0.5;
+}
+
+.numbers {
+  /* color: #FFF; */
+  font-weight: 700;
+}
+
+.numbers > img {
+  width: 1em;
+  margin-right: 3px;
+  margin-top: -2px;
 }
 
 .counts {
@@ -57,4 +114,48 @@
 
 .count {
   margin-right: 20px;
+}
+
+@media (min-width: 736px) and (max-width: 991px) {
+  .container {
+    max-width: 100%;
+    margin: 0;
+    padding: 30px 20px 0;
+  }
+  .profile {
+    margin: 0;
+  }
+  .single-row > .post {
+    width: 100%;
+  }
+  .post > img {
+    width: 100%;
+  }
+}
+
+@media (max-width: 735px) {
+  .container {
+    max-width: 100%;
+    margin: 0;
+    padding: 30px 0;
+  }
+  .profile {
+    margin: 0;
+  }
+  .profile-image {
+    width: 77px;
+    height: 77px;
+  }
+  .single-row {
+    width: 100%;
+    height: auto;
+    margin-bottom: 3px;
+  }
+  
+  .single-row > .post {
+    margin-right: 3px;
+  }
+  .post > img {
+    width: 100%;
+  }
 }
